# fastapi-crewai

./: .env-prod.semple  .env-semple  .gitignore  README.MD  pyproject.toml  start.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
DOCS/: CHECKPOINT.MD  DEPLOYMENT.md  FLUXOGRAMA.MD  PERMISSIONS.MD
app/: startup.py
app/api/assignment/: router.py  schemas.py
app/api/authentication/: controller.py  router.py
app/api/authorization/: controller.py  router.py
app/api/data_processing/: controller.py  router.py  schemas.py
app/api/role/: router.py  schemas.py
app/api/text_processing/: controller.py  router.py  schemas.py
app/api/transaction/: enum_operation_code.py  router.py  schemas.py
app/api/user/: controller.py  router.py
app/models/: __init__.py  assignment.py  processed_data.py  processed_text.py  role.py  transaction.py  user.py
app/utils/: base_model.py  base_schemas.py  client_ip.py  exceptions.py  generic_controller.py  llm.py  security.py  settings.py
apps/: startup.py
apps/api/assignment/: router.py  schemas.py
apps/api/authentication/: controller.py  router.py
apps/api/authorization/: controller.py  router.py  schemas.py
apps/api/role/: router.py  schemas.py
apps/api/text_processing/: controller.py  router.py
apps/api/transaction/: router.py  schemas.py
apps/api/user/: controller.py  router.py
apps/core/: startup.py
apps/core/api/assignment/: router.py  schemas.py
apps/core/api/authentication/: controller.py  router.py
apps/core/api/authorization/: controller.py  router.py  schemas.py
apps/core/api/role/: router.py  schemas.py
apps/core/api/text_processing/: controller.py  router.py
apps/core/api/transaction/: enum_operation_code.py  router.py  schemas.py
apps/core/api/user/: controller.py  router.py
apps/core/clients/: ai_clients.py  rag_client.py
apps/core/database/: session.py
apps/core/models/: __init__.py  assignment.py  authorization.py  processed_text.py  role.py  transaction.py  user.py
apps/core/utils/: generic_controller.py  llm.py  security.py
apps/database/: session.py
apps/ia/: README.md  __init__.py  main.py
apps/ia/agents/: __init__.py  conversation_agent.py
apps/ia/api/: __init__.py
apps/ia/api/chat/: controller.py  router.py  schemas.py
apps/ia/api/documents/: controller.py  router.py  schemas.py
apps/ia/models/: __init__.py  conversation.py  document.py  message.py
apps/ia/services/: __init__.py  rag_service.py
apps/ia/tools/: __init__.py  db_query_tool.py  document_query_tool.py  rag_search_tool.py
apps/models/: __init__.py  assignment.py  authorization.py  processed_text.py  role.py  transaction.py  user.py
apps/packpage/: generic_controller.py  llm.py  settings.py  validate_transaction_acess.py
apps/utils/: generic_controller.py  llm.py  security.py
examples/: chat_usage_examples.py
migrations/: env.py
migrations/versions/: 00292430c7bd_bigbang.py  337aad9ff426_criacao_inicial_das_tabelas.py  5cd78c473569_ia_models.py  6d421afaf99a_create_processed_data_table.py
scripts/: activate_env.sh  migrate.sh
seeds/: seed_super_user.py  seed_transactions.py
tests/: conftest.py  test_assignment.py  test_authentication.py  test_authorization.py  test_ia_chat.py  test_ia_chat_routes.py  test_ia_document_routes.py  test_ia_documents.py  test_rag_advanced.py  test_rag_integration.py  test_role.py  test_startup.py  test_transactions.py  test_users.py
tests/factory/: assignment_factory.py  authorization_factory.py  role_factory.py  trasaction_factory.py  user_factory.py
tests/mock/: mock_embeddings.py
